<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="app_name">Ravens</string>
    <!-- login activity-->
    <string name="not_yet_registered">Not Yet Registered !</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <!-- home activity-->
    <string name="title_activity_home">Ravens</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="user_name">User Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_chat_interface">ChatInterfaceActivity</string>
    <string name="title_activity_delete">Delete</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="verificationmessage">Please enter phone number to create your account. Ravens will use this phone number to send verification message.</string>
    <string name="phone_number">Phone number</string>
    <string name="verify">Verify</string>
    <string name="receive_message">Receive Message</string>
    <string name="standard_sms_charges_may_apply">Standard SMS charges may apply</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="agree_and_continue">AGREE AND CONTINUE</string>
    <string name="next">NEXT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="account_settings">Account settings</string>
    <string name="ravenevar">RavenevaR</string>
    <string name="not_decided">Not decided</string>

    <string name="status">Status</string>
    <string name="new_group">New group</string>
    <string name="profile_setup_message">Please provide profile photo username and staus or choose from our collection</string>
    <string name="current_staus">Current staus</string>
    <string name="our_recommendation">Our recommendation</string>
    <string name="save">Save</string>
    <string name="status_and_phone_number">Status and phone number</string>


    <!-- default Status-->
    <string name="default_status">How you doin ?</string>
</resources>
