<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ravensltd.ravens.loginRegister.Register.VerifyPhoneNumberActivity">

    <include layout="@layout/app_bar_layout_white"
        android:id="@+id/verifyphone_toolbar">
    </include>

    <TextView
        android:id="@+id/createaccount_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:padding="12dp"
        android:text="@string/verificationmessage"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/createaccount_et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createaccount_tv_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/createaccount_tv_sendmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createaccount_et_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/receive_message"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/createaccount_tv_alertmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_sms_charges_may_apply"
        android:layout_below="@+id/createaccount_tv_sendmessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <EditText
        android:id="@+id/createaccount_et_verificationcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="number"
        android:visibility="invisible"
        android:layout_below="@+id/createaccount_tv_alertmessage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp" />

    <Button
        android:id="@+id/createaccount_bt_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createaccount_et_verificationcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary"
        android:text="@string/verify"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

        <!--android:layout_below="@+id/createaccount_bt_verify"
        android:layout_marginTop="50dp"-->

</RelativeLayout>

<!--
<SeekBar
        android:id="@+id/createcontact_seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:max="3"
        android:progress="1" />
-->