<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ravensltd.ravens.profileSetting.StatusSettingActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/status_textlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/status_et_currentstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/current_staus"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/status_tv_our"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_textlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/our_recommendation"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/status_bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_textlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp" />


</RelativeLayout>
