<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ravensltd.ravens.loginRegister.Register.ProfileSetupActivity">

    <include layout="@layout/app_bar_layout_white"
        android:id="@+id/setup_profile_toolbar">
    </include>

    <TextView
        android:id="@+id/profile_setup_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_profile_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/profile_setup_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_setup_photo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_setup_msg"
        android:layout_marginStart="15dp"
        android:layout_marginTop="47dp"
        android:src="@mipmap/defaultcontact" />

    <EditText
        android:id="@+id/profile_setup_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profile_setup_photo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/profile_setup_photo"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:maxLength="20" />

    <Button
        android:id="@+id/setup_profile_bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        />

    <EditText
        android:id="@+id/profile_setup_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setup_profile_bt_next"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="textPersonName" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_setup_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_setup_photo"
        android:layout_alignEnd="@+id/profile_setup_photo"
        android:clickable="true"
        android:src="@mipmap/camera"
        app:fabSize="mini" />


</RelativeLayout>
