<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ravensltd.ravens.loginRegister.Register.UserCredential">


    <ScrollView
        android:id="@+id/usercredential_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/userScroll_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/userCredential_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:layout_gravity="center_horizontal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/userCredential_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"

                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_gravity="center_horizontal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/userCredential_confirmpswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_gravity="center_horizontal"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/userCredential_nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginTop="25dp"
                android:text="NEXT"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>
    </ScrollView>

    <SeekBar
        android:id="@+id/userCredential_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:max="3"
        android:progress="2"
        android:layout_marginTop="50dp"
        android:layout_below="@id/usercredential_scrollview"/>

</RelativeLayout>
